# MDD-from-PSC

./: .envrc  .gitignore  .gitmodules  README.md  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
.env/: flake.nix
src/: utils.py  xbow.py
src/data-preparation/: folds.py  prepare.py  segment.py  transcriptions.py
src/features/: wav2vec.py
src/ml/scikit/: audio.py  base.py  fusion.py  metadata.py  permutation_test.py
